Retrieve duration from file as soon as it's downloaded

This will replace the less reliable duration as retrieved from the rss
feed entry.

BUG: 497448